<?xml version="1.0"?>
<package format="2">
  <name>motion</name>
  <version>0.0.0</version>
  <description>The motion package</description>
  <maintainer email="danen@todo.todo">danen</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>utils</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
